added v1 of classes

--- a/classes.html
+++ b/classes.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/classes.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="javascript/main.js"></script>
+    <script src="javascript/classes.js"></script>
     <title>Matthew's Oneshot</title>
 </head>
 <body>
-    
+    <div class="body">
+        <nav>
+            <ul>
+                <li name="home">Home</li>
+                <li name="setting">Setting</li>
+                <li name="races">Races</li>
+                <li name="classes">Classes</li>
+            </ul>
+        </nav> 
+        <div class="class-page-content">
+            <div class="class" id="barbarian">
+                <h1>Barbarian</h1>
+                <div class="class-content">
+                    <p>Lorem ipsum text</p>
+                </div>
+            </div>
+            <div class="class" id="bard">
+                <h1>Bard</h1>
+                <p>More lorem ipsum</p>
+            </div>
+            <div class="class" id="cleric">
+                <h1>Cleric</h1>
+            </div>
+            <div class="class" id="druid">
+                <h1>Druid</h1>
+            </div>
+            <div class="class" id="fighter">
+                <h1>Fighter</h1>
+            </div>
+            <div class="class" id="monk">
+                <h1>Monk</h1>
+            </div>
+            <div class="class" id="paladin">
+                <h1>Paladin</h1>
+            </div>
+            <div class="class" id="ranger">
+                <h1>Ranger</h1>
+            </div>
+            <div class="class" id="rogue">
+                <h1>Rogue</h1>
+            </div>
+            <div class="class" id="sorcerer">
+                <h1>Sorcerer</h1>
+            </div>
+            <div class="class" id="warlock">
+                <h1>Warlock</h1>
+            </div>
+            <div class="class" id="wizard">
+                <h1>Wizard</h1>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
