reficed races page

--- a/races.html
+++ b/races.html
@@ -23,19 +23,51 @@
         </nav> 
         <div class="race-content">
             <div class="race" id="dragonborn">
-
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/340/420/618/636272677995471928.png" alt="">
+                <h1>Dragonborn</h1>
             </div>
-            <div class="race" id="dwarf"></div>
-            <div class="race" id="elf"></div>
-            <div class="race" id="gnome"></div>
-            <div class="race" id="halfelf"></div>
-            <div class="race" id="halfling"></div>
-            <div class="race" id="halforc"></div>
-            <div class="race" id="human"></div>
-            <div class="race" id="tiefling"></div>
+            <div class="race" id="dwarf">
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/254/420/618/636271781394265550.png" alt="">
+                <h1>Dwarf</h1>
+            </div>
+            <div class="race" id="elf">
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/7/639/420/618/636287075350739045.png" alt="">
+                <h1>Elf</h1>
+            </div>
+            <div class="race" id="gnome">
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/334/420/618/636272671553055253.png" alt="">
+                <h1>Gnome</h1>
+            </div>
+            <div class="race" id="halfelf">
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/481/420/618/636274618102950794.png" alt="">
+                <h1>Half-Elf</h1>
+            </div>
+            <div class="race" id="halfling">
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/256/420/618/636271789409776659.png" alt="">
+                <h1>Halfling</h1>
+            </div>
+            <div class="race" id="halforc">
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/466/420/618/636274570630462055.png" alt="">
+                <h1>Half-Orc</h1>
+            </div>
+            <div class="race" id="human">
+                <img src="https://media-waterdeep.cursecdn.com/avatars/thumbnails/6/258/420/618/636271801914013762.png" alt="">
+                <h1>Human</h1>
+            </div>
+            <div class="race" id="tiefling">
+                <img src="http://media-waterdeep.cursecdn.com/attachments/0/646/tiefling.png" alt="">
+                <h1>Tielfing</h1>
+            </div>
         </div>
         <div class="cover">
-            <div class="race-description"></div>
+            <div class="race-page">
+                <img src="" alt="Race image here">
+                <div class="race-description">
+                    <h1>Dwarf</h1>
+                    <p>I am a dwarf, and I'm diggin a hole. Diggy-diggy hole, I'm digging a hole! We dug too deep, and my axe! Aye, I could do that.</p>
+                </div>
+                <div class="close"></div>
+            </div>
         </div>
     </div>
 </body>
